CMAKE_SOURCE_DIR => OCIO_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@
 
 cmake_minimum_required(VERSION 3.13)
 
+set(OCIO_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
 set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
-    ${CMAKE_SOURCE_DIR}/share/cmake/utils
-    ${CMAKE_SOURCE_DIR}/share/cmake/macros
-    ${CMAKE_SOURCE_DIR}/share/cmake/modules
+    ${OCIO_SOURCE_DIR}/share/cmake/utils
+    ${OCIO_SOURCE_DIR}/share/cmake/macros
+    ${OCIO_SOURCE_DIR}/share/cmake/modules
 )
 
 set(CMAKE_WARN_DEPRECATED ON)
@@ -23,11 +25,10 @@ if(APPLE AND NOT DEFINED CMAKE_OSX_DEPLOYMENT_TARGET)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version")
 endif()
 
-
 ###############################################################################
 # Project definition.
 
-project(OpenColorIO 
+project(OpenColorIO
     VERSION 2.3.0
     DESCRIPTION "OpenColorIO (OCIO) is a complete color management solution"
     HOMEPAGE_URL https://github.com/AcademySoftwareFoundation/OpenColorIO
@@ -55,8 +56,8 @@ include(GNUInstallDirs)
 ###############################################################################
 # Forbid in-source build.
 
-if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
-    message(FATAL_ERROR 
+if(${OCIO_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+    message(FATAL_ERROR
             "In-source build not allowed. Please make a new sub-directory and run cmake from there.")
 endif()
 
@@ -110,7 +111,7 @@ unset(_lowercase_cmake_build_type_)
 
 if (NOT _build_type_valid_)
     string(REPLACE ";" ", " _CMAKE_CONFIGURATION_TYPES_STR "${CMAKE_CONFIGURATION_TYPES}")
-    message(FATAL_ERROR 
+    message(FATAL_ERROR
             "CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} is unsupported. Supported values are: ${_CMAKE_CONFIGURATION_TYPES_STR}.")
 endif()
 unset(_build_type_valid_)
@@ -201,7 +202,7 @@ if(DEFINED OCIO_INSTALL_EXT_PACKAGES)
     # Case insensitive match
     string(TOUPPER "${OCIO_INSTALL_EXT_PACKAGES}" _OCIO_INSTALL_EXT_PACKAGES)
     if(NOT "${_OCIO_INSTALL_EXT_PACKAGES}" IN_LIST _EXT_OPTIONS)
-        message(FATAL_ERROR 
+        message(FATAL_ERROR
                 "OCIO_INSTALL_EXT_PACKAGES=${OCIO_INSTALL_EXT_PACKAGES} is unsupported. Supported values are: ${_EXT_OPTIONS_STR}.")
     endif()
 endif()
@@ -217,7 +218,7 @@ set_property(CACHE OCIO_INSTALL_EXT_PACKAGES PROPERTY STRINGS ${_EXT_OPTIONS})
 # Versioning
 
 if(NOT DEFINED SOVERSION)
-    set(SOVERSION "${OpenColorIO_VERSION_MAJOR}.${OpenColorIO_VERSION_MINOR}" CACHE STRING 
+    set(SOVERSION "${OpenColorIO_VERSION_MAJOR}.${OpenColorIO_VERSION_MINOR}" CACHE STRING
         "Set the SO version in the SO name of the output library")
     message(STATUS "Setting SOVERSION to '${SOVERSION}' as none was specified.")
 elseif(SOVERSION STREQUAL "")
@@ -229,12 +230,12 @@ endif()
 # Namespace
 
 if(NOT DEFINED OCIO_NAMESPACE)
-	set(OCIO_NAMESPACE "OpenColorIO_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING 
+	set(OCIO_NAMESPACE "OpenColorIO_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING
         "Specify the main OCIO C++ namespace: Options include OpenColorIO OpenColorIO_<YOURFACILITY> etc.")
 elseif(OCIO_NAMESPACE STREQUAL "")
     message(FATAL_ERROR "A namespace cannot be empty.")
 else()
-    set(OCIO_NAMESPACE "OpenColorIO_${OCIO_NAMESPACE}_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING 
+    set(OCIO_NAMESPACE "OpenColorIO_${OCIO_NAMESPACE}_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING
         "Specify the main OCIO C++ namespace: Options include OpenColorIO OpenColorIO_<YOURFACILITY> etc.")
     message(STATUS "Setting namespace to '${OCIO_NAMESPACE}' as none was specified.")
 endif()
@@ -254,12 +255,12 @@ set (OCIO_LIBNAME_SUFFIX "" CACHE STRING
 # Error checking
 
 if(OCIO_BUILD_SHARED AND OCIO_BUILD_STATIC)
-	message(FATAL_ERROR 
+	message(FATAL_ERROR
             "Deprecated options OCIO_BUILD_SHARED and OCIO_BUILD_STATIC cannot both be used at once")
 endif()
 
 if(OCIO_BUILD_SHARED)
-	message(DEPRECATION 
+	message(DEPRECATION
             "Option OCIO_BUILD_SHARED is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=ON (default ON)")
 	if(NOT BUILD_SHARED_LIBS)
 		set(BUILD_SHARED_LIBS ON)
@@ -267,7 +268,7 @@ if(OCIO_BUILD_SHARED)
 endif()
 
 if(OCIO_BUILD_STATIC)
-	message(DEPRECATION 
+	message(DEPRECATION
             "Option OCIO_BUILD_STATIC is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=OFF (default ON)")
 	if(BUILD_SHARED_LIBS)
 		set(BUILD_SHARED_LIBS OFF)
@@ -275,7 +276,7 @@ if(OCIO_BUILD_STATIC)
 endif()
 
 if (NOT BUILD_SHARED_LIBS AND NOT OCIO_INSTALL_EXT_PACKAGES STREQUAL NONE)
-   message(STATUS "Note that building the static version of OpenColorIO does not embed the dependencies\  
+   message(STATUS "Note that building the static version of OpenColorIO does not embed the dependencies\
    into the library file. The needed dependencies must be linked to the consumer
    application or shared library that uses static OpenColorIO.
 
@@ -286,8 +287,8 @@ endif()
 
 ###############################################################################
 # Find or install external dependencies
-# Some required targets may be created by third-party CMake configs, which 
-# don't generally produce global targets. To guarantee all imported targets are 
+# Some required targets may be created by third-party CMake configs, which
+# don't generally produce global targets. To guarantee all imported targets are
 # global, this module is included at the project root level.
 
 include(FindExtPackages)
@@ -314,7 +315,7 @@ else()
     set(OCIO_SETUP_NAME setup_ocio.sh)
 endif()
 
-configure_file(${CMAKE_SOURCE_DIR}/share/ocio/${OCIO_SETUP_NAME}.in
+configure_file(${OCIO_SOURCE_DIR}/share/ocio/${OCIO_SETUP_NAME}.in
     ${CMAKE_CURRENT_BINARY_DIR}/share/ocio/${OCIO_SETUP_NAME} @ONLY)
 
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/share/ocio/${OCIO_SETUP_NAME} DESTINATION ${CMAKE_INSTALL_DATADIR}/ocio/)
