--- a/src/bindings/python/CMakeLists.txt
+++ b/src/bindings/python/CMakeLists.txt
@@ -17,7 +17,7 @@ if(OCIO_BUILD_DOCS)
 	set(PYOCIO_DOCSTRINGS_DIR "${CMAKE_BINARY_DIR}/docs/_doxygen")
 	set(PYOCIO_DOCSTRINGS_H "${PYOCIO_DOCSTRINGS_DIR}/docstrings.h")
     set(DOXYGEN_INDEX_XML "${PYOCIO_DOCSTRINGS_DIR}/xml/index.xml")
-	set(EXTRACT_DOCSTRINGS_PY "${CMAKE_SOURCE_DIR}/share/docs/extract_docstrings.py")
+	set(EXTRACT_DOCSTRINGS_PY "${OCIO_SOURCE_DIR}/share/docs/extract_docstrings.py")
 
 	# Run docstring extraction if docstrings.h is behind doxygen XML
 	add_custom_command(OUTPUT ${PYOCIO_DOCSTRINGS_H}
@@ -39,9 +39,9 @@ if(OCIO_BUILD_DOCS)
 else()
 
 	# Use stand-in docstrings.h file when docs are not built
-	set(PYOCIO_DOCSTRINGS_DIR "${CMAKE_SOURCE_DIR}/share/docs")
+	set(PYOCIO_DOCSTRINGS_DIR "${OCIO_SOURCE_DIR}/share/docs")
 
-	message(WARNING 
+	message(WARNING
 		"Building PyOpenColorIO with OCIO_BUILD_DOCS disabled will result in "
 		"incomplete Python docstrings."
 	)
@@ -201,8 +201,8 @@ target_include_directories(PyOpenColorIO
 		${Python_INCLUDE_DIRS}
 )
 
-# pybind11 recommends intentionally NOT linking against libpython on Linux and 
-# macOS, to prevent segfaults when potentially working with multiple Python 
+# pybind11 recommends intentionally NOT linking against libpython on Linux and
+# macOS, to prevent segfaults when potentially working with multiple Python
 # installations. See note in:
 #   https://pybind11.readthedocs.io/en/stable/compiling.html#building-manually
 
