CMAKE_SOURCE_DIR => OCIO_SOURCE_DIR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@
 
 cmake_minimum_required(VERSION 3.12)
 
+set(OCIO_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
+
 set(CMAKE_MODULE_PATH
     ${CMAKE_MODULE_PATH}
-    ${CMAKE_SOURCE_DIR}/share/cmake/utils
-    ${CMAKE_SOURCE_DIR}/share/cmake/macros
-    ${CMAKE_SOURCE_DIR}/share/cmake/modules
+    ${OCIO_SOURCE_DIR}/share/cmake/utils
+    ${OCIO_SOURCE_DIR}/share/cmake/macros
+    ${OCIO_SOURCE_DIR}/share/cmake/modules
 )
 
 set(CMAKE_WARN_DEPRECATED ON)
@@ -23,11 +25,9 @@ if(APPLE AND NOT DEFINED CMAKE_OSX_DEPLOYMENT_TARGET)
     set(CMAKE_OSX_DEPLOYMENT_TARGET "10.13" CACHE STRING "Minimum OS X deployment version")
 endif()
 
-
-###############################################################################
+# ##############################################################################
 # Project definition.
-
-project(OpenColorIO 
+project(OpenColorIO
     VERSION 2.1.3
     DESCRIPTION "OpenColorIO (OCIO) is a complete color management solution"
     HOMEPAGE_URL https://github.com/AcademySoftwareFoundation/OpenColorIO
@@ -51,13 +51,11 @@ enable_testing()
 # Provides install directory variables as defined by the GNU Coding Standards.
 include(GNUInstallDirs)
 
-
-###############################################################################
+# ##############################################################################
 # Forbid in-source build.
-
-if(${CMAKE_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
-    message(FATAL_ERROR 
-            "In-source build not allowed. Please make a new sub-directory and run cmake from there.")
+if(${OCIO_SOURCE_DIR} STREQUAL ${CMAKE_BINARY_DIR})
+    message(FATAL_ERROR
+        "In-source build not allowed. Please make a new sub-directory and run cmake from there.")
 endif()
 
 
@@ -96,8 +94,8 @@ set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeR
 
 if(NOT "${CMAKE_BUILD_TYPE}" IN_LIST CMAKE_CONFIGURATION_TYPES)
     string(REPLACE ";" ", " _CMAKE_CONFIGURATION_TYPES_STR "${CMAKE_CONFIGURATION_TYPES}")
-    message(FATAL_ERROR 
-            "CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} is unsupported. Supported values are: ${_CMAKE_CONFIGURATION_TYPES_STR}.")
+    message(FATAL_ERROR
+        "CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} is unsupported. Supported values are: ${_CMAKE_CONFIGURATION_TYPES_STR}.")
 endif()
 
 # Is that in debug mode?
@@ -176,8 +174,8 @@ if(DEFINED OCIO_INSTALL_EXT_PACKAGES)
     # Case insensitive match
     string(TOUPPER "${OCIO_INSTALL_EXT_PACKAGES}" _OCIO_INSTALL_EXT_PACKAGES)
     if(NOT "${_OCIO_INSTALL_EXT_PACKAGES}" IN_LIST _EXT_OPTIONS)
-        message(FATAL_ERROR 
-                "OCIO_INSTALL_EXT_PACKAGES=${OCIO_INSTALL_EXT_PACKAGES} is unsupported. Supported values are: ${_EXT_OPTIONS_STR}.")
+        message(FATAL_ERROR
+            "OCIO_INSTALL_EXT_PACKAGES=${OCIO_INSTALL_EXT_PACKAGES} is unsupported. Supported values are: ${_EXT_OPTIONS_STR}.")
     endif()
 endif()
 
@@ -192,7 +190,7 @@ set_property(CACHE OCIO_INSTALL_EXT_PACKAGES PROPERTY STRINGS ${_EXT_OPTIONS})
 # Versioning
 
 if(NOT DEFINED SOVERSION)
-    set(SOVERSION "${OpenColorIO_VERSION_MAJOR}.${OpenColorIO_VERSION_MINOR}" CACHE STRING 
+    set(SOVERSION "${OpenColorIO_VERSION_MAJOR}.${OpenColorIO_VERSION_MINOR}" CACHE STRING
         "Set the SO version in the SO name of the output library")
     message(STATUS "Setting SOVERSION to '${SOVERSION}' as none was specified.")
 elseif(SOVERSION STREQUAL "")
@@ -204,12 +202,12 @@ endif()
 # Namespace
 
 if(NOT DEFINED OCIO_NAMESPACE)
-	set(OCIO_NAMESPACE "OpenColorIO_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING 
+    set(OCIO_NAMESPACE "OpenColorIO_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING
         "Specify the master OCIO C++ namespace: Options include OpenColorIO OpenColorIO_<YOURFACILITY> etc.")
 elseif(OCIO_NAMESPACE STREQUAL "")
     message(FATAL_ERROR "A namespace cannot be empty.")
 else()
-    set(OCIO_NAMESPACE "OpenColorIO_${OCIO_NAMESPACE}_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING 
+    set(OCIO_NAMESPACE "OpenColorIO_${OCIO_NAMESPACE}_v${OpenColorIO_VERSION_MAJOR}_${OpenColorIO_VERSION_MINOR}${OpenColorIO_VERSION_RELEASE_TYPE}" CACHE STRING
         "Specify the master OCIO C++ namespace: Options include OpenColorIO OpenColorIO_<YOURFACILITY> etc.")
     message(STATUS "Setting namespace to '${OCIO_NAMESPACE}' as none was specified.")
 endif()
@@ -229,21 +227,21 @@ set (OCIO_LIBNAME_SUFFIX "" CACHE STRING
 # Error checking
 
 if(OCIO_BUILD_SHARED AND OCIO_BUILD_STATIC)
-	message(FATAL_ERROR 
-            "Deprecated options OCIO_BUILD_SHARED and OCIO_BUILD_STATIC cannot both be used at once")
+    message(FATAL_ERROR
+        "Deprecated options OCIO_BUILD_SHARED and OCIO_BUILD_STATIC cannot both be used at once")
 endif()
 
 if(OCIO_BUILD_SHARED)
-	message(DEPRECATION 
-            "Option OCIO_BUILD_SHARED is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=ON (default ON)")
+    message(DEPRECATION
+        "Option OCIO_BUILD_SHARED is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=ON (default ON)")
 	if(NOT BUILD_SHARED_LIBS)
 		set(BUILD_SHARED_LIBS ON)
 	endif()
 endif()
 
 if(OCIO_BUILD_STATIC)
-	message(DEPRECATION 
-            "Option OCIO_BUILD_STATIC is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=OFF (default ON)")
+    message(DEPRECATION
+        "Option OCIO_BUILD_STATIC is deprecated. Please use the cmake standard BUILD_SHARED_LIBS=OFF (default ON)")
 	if(BUILD_SHARED_LIBS)
 		set(BUILD_SHARED_LIBS OFF)
 	endif()
@@ -252,8 +250,8 @@ endif()
 
 ###############################################################################
 # Find or install external dependencies
-# Some required targets may be created by third-party CMake configs, which 
-# don't generally produce global targets. To guarantee all imported targets are 
+# Some required targets may be created by third-party CMake configs, which
+# don't generally produce global targets. To guarantee all imported targets are
 # global, this module is included at the project root level.
 
 include(FindExtPackages)
@@ -280,7 +278,7 @@ else()
     set(OCIO_SETUP_NAME setup_ocio.sh)
 endif()
 
-configure_file(${CMAKE_SOURCE_DIR}/share/ocio/${OCIO_SETUP_NAME}.in
+configure_file(${OCIO_SOURCE_DIR}/share/ocio/${OCIO_SETUP_NAME}.in
     ${CMAKE_CURRENT_BINARY_DIR}/share/ocio/${OCIO_SETUP_NAME} @ONLY)
 
 INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/share/ocio/${OCIO_SETUP_NAME} DESTINATION ${CMAKE_INSTALL_DATADIR}/ocio/)
@@ -323,4 +321,3 @@ install(
     FILES "${OCIO_PROJECT_CONFIG}" "${OCIO_VERSION_CONFIG}"
     DESTINATION "${OCIO_CONFIG_INSTALL_DIR}"
 )
-
