--- a/src/OpenColorIO/CMakeLists.txt
+++ b/src/OpenColorIO/CMakeLists.txt
@@ -406,6 +406,7 @@ if(MSVC AND BUILD_SHARED_LIBS)
     install(FILES $<TARGET_PDB_FILE:${PROJECT_NAME}> DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
 endif()
 
+if(OCIO_INSTALL)
 install(TARGETS OpenColorIO
     EXPORT ${PROJECT_NAME}_EXPORTED_TARGETS
     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -413,3 +414,4 @@ install(TARGETS OpenColorIO
     ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
     PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/OpenColorIO
 )
+endif()
